--- a/hospitalv2/dashboard.html
+++ b/hospitalv2/dashboard.html
@@ -3,212 +3,187 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Doctor Dashboard — CSV Demo</title>
+  <title>Doctor Dashboard – Dr. Charan Hospital</title>
   <link rel="icon" href="assets/logo.png"/>
   <link rel="stylesheet" href="styles.css"/>
 
-  <!-- CSV + Charts -->
-  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-
   <style>
     .wrap{max-width:1120px;margin:0 auto}
-    .toolbar{display:flex;gap:10px;flex-wrap:wrap;margin:10px 12px}
-    .chip{padding:10px 14px;border-radius:999px;background:var(--card-bg);border:1px solid rgba(0,0,0,.06);box-shadow:var(--shadow)}
+    .toolbar{display:flex;gap:10px;flex-wrap:wrap;padding:8px 12px;margin:8px 12px}
+    .chip{height:42px;padding:0 16px;border-radius:999px;background:var(--card-bg);
+      border:1px solid rgba(0,0,0,.06);box-shadow:var(--shadow);display:grid;place-items:center}
     .section{background:var(--card-bg);margin:12px;padding:18px;border-radius:var(--radius);box-shadow:var(--shadow)}
-    .kpis{display:grid;gap:14px;grid-template-columns:repeat(auto-fit,minmax(220px,1fr))}
+    .tiles{display:grid;gap:16px}
+    @media(min-width:720px){.tiles{grid-template-columns:1fr 1fr}}
+    .tile{border-radius:18px;padding:24px;box-shadow:var(--shadow);border:1px solid rgba(0,0,0,.06);
+      text-decoration:none;color:inherit;display:block}
+    .tile h2{font-size:26px;margin-bottom:8px;text-decoration:underline;text-underline-offset:4px}
+    .tile p{color:var(--muted);font-size:16px}
+    .t-lilac{background:linear-gradient(135deg,var(--t-lilac),#cab8ff);color:var(--c-lilac)}
+    .t-blue{background:linear-gradient(135deg,var(--t-blue),#bcdfff);color:var(--c-blue)}
+    .t-mint{background:linear-gradient(135deg,var(--t-mint),#aaf5d0);color:var(--c-mint)}
+    .t-rose{background:linear-gradient(135deg,var(--t-rose),#ffb6cc);color:var(--c-rose)}
+    .t-peach{background:linear-gradient(135deg,var(--t-peach),#ffb9ad);color:var(--c-peach)}
+    .kpis{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:14px;margin-top:10px}
     .kpi{border-radius:16px;padding:16px;box-shadow:var(--shadow);border:1px solid rgba(0,0,0,.06)}
-    .kpi h4{font-size:14px;margin-bottom:6px;opacity:.85}
-    .kpi .num{font-size:28px;font-weight:800}
-    .filters{display:flex;gap:8px;flex-wrap:wrap;margin:8px 0 14px}
-    .filters .chip.active{background:var(--accent);color:#fff;font-weight:700}
-    .row{display:grid;gap:16px;grid-template-columns:1fr}
-    @media (min-width:960px){.row{grid-template-columns:2fr 1fr}}
-    canvas{background:var(--card-bg);border-radius:16px;box-shadow:var(--shadow);padding:12px}
-    table{width:100%;border-collapse:separate;border-spacing:0}
-    th,td{padding:10px;border-bottom:1px solid rgba(0,0,0,.06)}
-    th{text-align:left}
+    .kpi h4{font-size:14px;opacity:.85;margin-bottom:6px}
+    .kpi .num{font-size:30px;font-weight:800}
     .muted{color:var(--muted)}
   </style>
 </head>
 <body>
-<div class="wrap">
-  <!-- Banner -->
-  <header class="banner">
-    <button id="themeToggle" class="chip floating-toggle" aria-label="Theme">🌙</button>
-  </header>
+  <div class="wrap">
+    <!-- Banner -->
+    <header class="banner">
+      <button id="themeToggle" class="chip floating-toggle" aria-label="Theme">🌙</button>
+    </header>
 
-  <!-- Actions -->
-  <nav class="toolbar">
-    <a class="chip" href="index.html">← Home</a>
-    <button id="btnRefresh" class="chip">Force Refresh Cache</button>
-  </nav>
+    <!-- Toolbar -->
+    <nav class="toolbar">
+      <a class="chip" href="index.html">← Home</a>
+      <button id="logoutBtn" class="chip">Logout</button>
+      <button id="clearCacheBtn" class="chip">Clear Cache</button>
+    </nav>
 
-  <!-- Sales Analytics -->
-  <section class="section">
-    <h2 style="margin-bottom:10px;">Sales Analytics</h2>
+    <!-- Tiles -->
+    <section class="section">
+      <div class="tiles">
+        <a class="tile t-lilac" href="analytics.html">
+          <h2>Analytics</h2>
+          <p>KPIs & weekly sales</p>
+        </a>
 
-    <div class="kpis">
-      <div class="kpi panel--blue">
-        <h4>Today (₹)</h4><div class="num" id="kpiToday">0.00</div>
+        <a class="tile t-blue" href="pharmacy.html">
+          <h2>Pharmacy</h2>
+          <p>Today ₹<span id="todayAmt">0.00</span> · MTD ₹<span id="mtdAmt">0.00</span> · Top: <span id="topItem">—</span></p>
+        </a>
+
+        <a class="tile t-mint" href="bookings-status.html">
+          <h2>Booking Status</h2>
+          <p>Today / Week / Month counts</p>
+        </a>
+
+        <a class="tile t-rose" href="patients.html">
+          <h2>Patients</h2>
+          <p>Reminders & history · <span id="dueCnt">0</span> due today</p>
+        </a>
+
+        <a class="tile t-peach" href="staff.html" style="grid-column: 1 / -1;">
+          <h2>Staff</h2>
+          <p>Roster & attendance (view-only)</p>
+        </a>
+
+        <a class="tile t-lilac" href="settings.html" style="grid-column: 1 / -1;">
+          <h2>Settings</h2>
+          <p>PINs, Staff, Patients</p>
+        </a>
       </div>
-      <div class="kpi panel--mint">
-        <h4>This Month (₹)</h4><div class="num" id="kpiMTD">0.00</div>
+    </section>
+
+    <!-- Sales snapshot -->
+    <section class="section">
+      <h2 style="font-size:22px;margin-bottom:6px;">Sales Analytics</h2>
+      <div class="kpis">
+        <div class="kpi t-blue">
+          <h4>Today (₹)</h4><div class="num" id="kToday">0.00</div>
+        </div>
+        <div class="kpi t-mint">
+          <h4>This Month (₹)</h4><div class="num" id="kMTD">0.00</div>
+        </div>
+        <div class="kpi t-rose">
+          <h4>Invoices Today</h4><div class="num" id="kInv">0</div>
+        </div>
       </div>
-      <div class="kpi panel--peach">
-        <h4>Invoices Today</h4><div class="num" id="kpiCnt">0</div>
-      </div>
-      <div class="kpi panel--lilac">
-        <h4>Top Item (Today)</h4><div class="num" id="kpiTop">—</div>
-      </div>
-    </div>
+      <div class="muted" style="margin-top:8px">Source: <code>./data/invoices.csv</code> & <code>./data/invoice_items.csv</code></div>
+    </section>
+  </div>
 
-    <div class="filters">
-      <button class="chip" data-range="today">Today</button>
-      <button class="chip" data-range="7d">7D</button>
-      <button class="chip active" data-range="30d">30D</button>
-      <button class="chip" data-range="ytd">YTD</button>
-      <span class="muted" id="rangeLabel"></span>
-    </div>
+  <script>
+    /* ===== Theme toggle ===== */
+    const t=document.getElementById('themeToggle');
+    if(localStorage.theme){document.documentElement.dataset.theme=localStorage.theme;t.textContent=localStorage.theme==='light'?'🌞':'🌙'}
+    t.onclick=()=>{const cur=document.documentElement.dataset.theme||'light';const next=cur==='light'?'dark':'light';document.documentElement.dataset.theme=next;localStorage.theme=next;t.textContent=next==='light'?'🌞':'🌙'}
 
-    <div class="row">
-      <div>
-        <h3 class="muted" style="margin:8px 0">Revenue by Day</h3>
-        <canvas id="chartLine" height="140"></canvas>
-      </div>
-      <div>
-        <h3 class="muted" style="margin:8px 0">Top Items (Share)</h3>
-        <canvas id="chartPie" height="140"></canvas>
-      </div>
-    </div>
+    /* ===== Session guard: Doctor only ===== */
+    (function guard(){
+      const sess = JSON.parse(localStorage.getItem('session')||'null');
+      if(!sess || sess.role!=='doctor'){ location.replace('login.html'); }
+    })();
 
-    <p class="muted mt12">Source: <code>./data/invoices.csv</code> & <code>./data/invoice_items.csv</code></p>
-  </section>
+    /* ===== Toolbar actions ===== */
+    document.getElementById('logoutBtn').onclick=()=>{
+      localStorage.removeItem('session'); location.replace('login.html');
+    };
+    document.getElementById('clearCacheBtn').onclick=async()=>{
+      localStorage.clear(); sessionStorage.clear();
+      if('caches' in window){ const ks=await caches.keys(); await Promise.all(ks.map(k=>caches.delete(k))); }
+      alert('Cache cleared. Reloading…'); location.reload();
+    };
 
-  <!-- Staff Today (read-only) -->
-  <section class="section">
-    <div style="display:flex;justify-content:space-between;align-items:center;gap:10px">
-      <h2>Staff (Today) — View only</h2>
-      <div class="muted" id="attDate"></div>
-    </div>
-    <table class="mt12">
-      <thead><tr><th>Name</th><th>Role</th><th>Status</th><th>Note</th></tr></thead>
-      <tbody id="staffRows"><tr><td colspan="4" class="muted">Loading…</td></tr></tbody>
-    </table>
-    <p class="muted mt12">Source: <code>./data/staff_attendance.csv</code></p>
-  </section>
-</div>
+    /* ===== CSV helpers (works on GitHub Pages) ===== */
+    async function loadCSV(path){
+      const res = await fetch(path, {cache:'no-store'});
+      if(!res.ok) return [];
+      const text = await res.text();
+      const [head, ...rows] = text.trim().split(/\r?\n/);
+      const cols = head.split(',').map(s=>s.trim());
+      return rows.map(r=>{
+        const vals = r.split(',').map(s=>s.trim());
+        const obj = {};
+        cols.forEach((c,i)=>obj[c]=vals[i]??'');
+        return obj;
+      });
+    }
+    const fmt = n => (Number(n)||0).toFixed(2);
+    const iso = d => new Date(d).toISOString().slice(0,10);
 
-<script>
-/* ===== Theme + Force Refresh ===== */
-const t=document.getElementById('themeToggle');
-if(localStorage.theme){document.documentElement.dataset.theme=localStorage.theme;t.textContent=localStorage.theme==='light'?'🌞':'🌙'}
-t.onclick=()=>{const cur=document.documentElement.dataset.theme||'light';const nxt=cur==='light'?'dark':'light';document.documentElement.dataset.theme=nxt;localStorage.theme=nxt;t.textContent=nxt==='light'?'🌞':'🌙'}
-document.getElementById('btnRefresh').onclick=async()=>{
-  try{
-    localStorage.clear();
-    if('caches' in window){const ks=await caches.keys();await Promise.all(ks.map(k=>caches.delete(k)));}
-    if('serviceWorker' in navigator){const regs=await navigator.serviceWorker.getRegistrations();await Promise.all(regs.map(r=>r.unregister()));}
-    alert('Cache cleared. Reloading…'); location.reload();
-  }catch(e){alert(e.message)}
-};
+    /* ===== Sales snapshot from CSV ===== */
+    (async function renderSales(){
+      try{
+        const inv = await loadCSV('data/invoices.csv');        // invoice_date,total_rs
+        const items = await loadCSV('data/invoice_items.csv'); // invoice_id,item_name,qty,price_rs,amount_rs
 
-/* ===== CSV helpers ===== */
-async function loadCSV(url){
-  const r=await fetch(url,{cache:'no-cache'});
-  if(!r.ok) throw new Error('Fetch failed: '+url);
-  const txt=await r.text();
-  return new Promise(res=>Papa.parse(txt,{header:true,skipEmptyLines:true,complete:({data})=>res(data)}));
-}
-function parseMoney(v){const n=parseFloat(String(v||'').replace(/[, ]/g,''));return isNaN(n)?0:n;}
-function fmt(n){return (Number(n)||0).toFixed(2);}
-function iso(d){return new Date(d).toISOString().slice(0,10);}
+        const today = iso(new Date());
+        const mStart = iso(new Date(new Date().getFullYear(), new Date().getMonth(), 1));
 
-/* ===== Analytics logic (shared with analytics.html style) ===== */
-const rangeBtns=[...document.querySelectorAll('.filters .chip')];
-let lineChart,pieChart;
+        const invToday = inv.filter(i => (i.invoice_date || today) === today);
+        const invMTD   = inv.filter(i => (i.invoice_date || today) >= mStart);
 
-function setActiveRange(key){ rangeBtns.forEach(b=>b.classList.toggle('active',b.dataset.range===key)); }
-function rangeDates(key){
-  const today=new Date(); const end=iso(today); let start;
-  if(key==='today'){start=end}
-  else if(key==='7d'){const s=new Date(today);s.setDate(s.getDate()-6);start=iso(s)}
-  else if(key==='30d'){const s=new Date(today);s.setDate(s.getDate()-29);start=iso(s)}
-  else if(key==='ytd'){start=iso(new Date(today.getFullYear(),0,1))}
-  return {start,end};
-}
+        const sum = (list, key) => list.reduce((s,o)=> s + (Number(o[key])||0), 0);
 
-async function render(range='30d'){
-  setActiveRange(range);
-  const {start,end}=rangeDates(range);
-  document.getElementById('rangeLabel').textContent=`${start} → ${end}`;
+        const todayAmt = sum(invToday,'total_rs');
+        const mtdAmt   = sum(invMTD,'total_rs');
 
-  const [invoices,items,attendance]=await Promise.all([
-    loadCSV('data/invoices.csv'),
-    loadCSV('data/invoice_items.csv'),
-    loadCSV('data/staff_attendance.csv')
-  ]);
+        document.getElementById('kToday').textContent = fmt(todayAmt);
+        document.getElementById('kMTD').textContent   = fmt(mtdAmt);
+        document.getElementById('kInv').textContent   = invToday.length;
 
-  // ===== KPIs =====
-  invoices.forEach(i=>{ i.invoice_date=(i.invoice_date||i.date||i.day||'').slice(0,10);
-                        i.total_rs=parseMoney(i.total_rs||i.total); });
-  const todayISO=iso(new Date());
-  const monthStart=iso(new Date(new Date().getFullYear(), new Date().getMonth(), 1));
-  const todays=invoices.filter(i=>i.invoice_date===todayISO);
-  const mtd=invoices.filter(i=>i.invoice_date>=monthStart);
-  document.getElementById('kpiToday').textContent=fmt(todays.reduce((s,i)=>s+i.total_rs,0));
-  document.getElementById('kpiMTD').textContent=fmt(mtd.reduce((s,i)=>s+i.total_rs,0));
-  document.getElementById('kpiCnt').textContent=todays.length;
+        // top item today (by revenue)
+        const setTodayIds = new Set(invToday.map(i=>i.id));
+        const map = {};
+        items.filter(it=> setTodayIds.has(it.invoice_id)).forEach(it=>{
+          const name = it.item_name || '—';
+          const amt = Number(it.amount_rs)||((Number(it.qty)||0)*(Number(it.price_rs)||0));
+          map[name]=(map[name]||0)+amt;
+        });
+        const top = Object.entries(map).sort((a,b)=>b[1]-a[1])[0]?.[0] || '—';
+        document.getElementById('todayAmt').textContent = fmt(todayAmt);
+        document.getElementById('mtdAmt').textContent   = fmt(mtdAmt);
+        document.getElementById('topItem').textContent  = top;
+      }catch(e){
+        console.warn('CSV load failed', e);
+      }
+    })();
 
-  // Top item today
-  const mapToday={};
-  items.filter(it=>(it.invoice_date||it.date||'').slice(0,10)===todayISO)
-       .forEach(it=>{
-         const name=it.item_name||it.name||'—';
-         const amt=parseMoney(it.amount_rs||it.amount||it.price_rs)*(parseFloat(it.qty||1)||1);
-         mapToday[name]=(mapToday[name]||0)+amt;
-       });
-  const topItem=Object.entries(mapToday).sort((a,b)=>b[1]-a[1])[0]?.[0]||'—';
-  document.getElementById('kpiTop').textContent=topItem;
-
-  // ===== Charts =====
-  const inRange=invoices.filter(i=>i.invoice_date>=start && i.invoice_date<=end);
-  const dayMap={}; inRange.forEach(i=>{dayMap[i.invoice_date]=(dayMap[i.invoice_date]||0)+i.total_rs});
-  const labels=Object.keys(dayMap).sort();
-  const values=labels.map(d=>dayMap[d]);
-
-  const itemsRange=items.filter(it=>{
-    const d=(it.invoice_date||it.date||'').slice(0,10);
-    return d>=start && d<=end;
-  });
-  const pieMap={}; itemsRange.forEach(it=>{
-    const name=it.item_name||it.name||'—';
-    const amt=parseMoney(it.amount_rs||it.amount||it.price_rs)*(parseFloat(it.qty||1)||1);
-    pieMap[name]=(pieMap[name]||0)+amt;
-  });
-  const pieLabels=Object.keys(pieMap); const pieValues=pieLabels.map(k=>pieMap[k]);
-
-  if(lineChart) lineChart.destroy(); if(pieChart) pieChart.destroy();
-  lineChart=new Chart(document.getElementById('chartLine'),{
-    type:'line',data:{labels,datasets:[{label:'₹',data:values,tension:.3,fill:true}]},
-    options:{plugins:{legend:{display:false}},scales:{y:{beginAtZero:true}}}
-  });
-  pieChart=new Chart(document.getElementById('chartPie'),{
-    type:'doughnut',data:{labels:pieLabels,datasets:[{data:pieValues}]},
-    options:{plugins:{legend:{position:'bottom'}}}
-  });
-
-  // ===== Staff table (today) =====
-  const todayRows=attendance.filter(a=>(a.day||a.date||'').slice(0,10)===todayISO);
-  document.getElementById('attDate').textContent=todayISO;
-  const html=todayRows.map(a=>`<tr>
-    <td>${a.name||''}</td><td>${a.role||''}</td><td>${a.status||''}</td><td>${a.note||''}</td>
-  </tr>`).join('');
-  document.getElementById('staffRows').innerHTML=html||`<tr><td colspan="4" class="muted">No data</td></tr>`;
-}
-
-rangeBtns.forEach(b=>b.addEventListener('click',()=>render(b.dataset.range)));
-render(); // default 30D
-</script>
+    /* ===== Patients “due today” from patients.csv (optional) ===== */
+    (async function due(){
+      try{
+        const pts = await loadCSV('data/patients.csv'); // expect next_visit (YYYY-MM-DD) column if present
+        const today = iso(new Date());
+        const due = pts.filter(p => (p.next_visit||'') === today).length;
+        document.getElementById('dueCnt').textContent = due;
+      }catch(_){}
+    })();
+  </script>
 </body>
 </html>
